# cipra

./: .clang-format  .dir-locals.el  AUTHORS.md  CMakeLists.txt  COPYING.md  Doxyfile.in  INSTALL.md  NEWS.md  README.md  cipra-counter.h  cipra-counter.inl  cipra-macros.h  cipra-tap13.h  cipra-tap13.inl  cipra-tests.h  cipra-tests.inl  cipra.h  cipraConfig.cmake.in
doc/: Doxyfile  tutorial.md
examples/: Makefile  usage.cpp  variadic.cpp
git_hooks/commit_msg/: spellcheck
git_hooks/pre_commit/: clang-format
include/impl/: tests.hpp  tests.ipp
